--- a/UncertaintyEstimatesFromClassifiers.ipynb
+++ b/UncertaintyEstimatesFromClassifiers.ipynb
@@ -4,7 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Another useful part of the scikit-learn interface that we haven’t talked about yet is the ability of classifiers to provide uncertainty estimates of predictions. Often, you are not only interested in which class a classifier predicts for a certain test point, but also how certain it is that this is the right class. In practice, different kinds of mistakes lead to very different outcomes in real-world applications. Imagine a medical application testing for cancer. Making a false positive prediction might lead to a patient undergoing additional tests, while a false negative prediction might lead to a serious disease not being treated. We will go into this topic in more detail in Chapter 6.\n",
+    "Another useful part of the scikit-learn interface that we haven’t talked about yet is the ability of classifiers to \n",
+    "provide uncertainty estimates of predictions. Often, you are not only interested in which class a classifier predicts\n",
+    " for a certain test point, but also how certain it is that this is the right class. In practice, different kinds of \n",
+    " mistakes lead to very different outcomes in real-world applications. Imagine a medical application testing for \n",
+    " cancer. Making a false positive prediction might lead to a patient undergoing additional tests, while a false \n",
+    " negative prediction might lead to a serious disease not being treated. We will go into this topic in more detail in \n",
+    " future classes.\n",
     "\n",
     "There are two different functions in scikit-learn that can be used to obtain uncertainty estimates from classifiers: decision_function and predict_proba. Most (but not all) classifiers have at least one of them, and many classifiers have both. Let’s look at what these two functions do on a synthetic two-dimensional dataset, when building a GradientBoostingClassifier classifier, which has both a decision_function and a predict_proba method:\n",
     "\n"
@@ -202,7 +208,8 @@
    "source": [
     "This arbitrary scaling makes the output of decision_function often hard to interpret.\n",
     "\n",
-    "In the following example we plot the decision_function for all points in the 2D plane using a color coding, next to a visualization of the decision boundary, as we saw earlier. We show training points as circles and test data as triangles (Figure 2-55):"
+    "In the following example we plot the decision_function for all points in the 2D plane using a color coding, next to a\n",
+    " visualization of the decision boundary, as we saw earlier. We show training points as circles and test data as triangles (Figure 1):"
    ]
   },
   {
@@ -260,7 +267,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Figure 2-55. Decision boundary (left) and decision function (right) for a gradient boosting model on a two-dimensional toy dataset. \n"
+    "Figure 1. Decision boundary (left) and decision function (right) for a gradient boosting model on a two-dimensional \n",
+    "toy dataset. \n"
    ]
   },
   {
@@ -342,7 +350,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the following example (Figure 2-56) we again show the decision boundary on the dataset, next to the class probabilities for the class 1:"
+    "In the following example (Figure 2) we again show the decision boundary on the dataset, next to the class probabilities for the class 1:"
    ]
   },
   {
@@ -398,7 +406,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Figure 2-56. Decision boundary (left) and predicted probabilities for the gradient boosting model shown in Figure 2-55"
+    "Figure 2. Decision boundary (left) and predicted probabilities for the gradient boosting model shown in Figure 1"
    ]
   },
   {
@@ -412,11 +420,13 @@
    "source": [
     "The boundaries in this plot are much more well-defined, and the small areas of uncertainty are clearly visible.\n",
     "\n",
-    "The scikit-learn website has a great comparison of many models and what their uncertainty estimates look like. We’ve reproduced this in Figure 2-57, and we encourage you to go through the example there.\n",
+    "The scikit-learn website has a great comparison of many models and what their uncertainty estimates look like. We’ve \n",
+    "reproduced this in Figure 3, and we encourage you to go through the example there.\n",
     "\n",
     "![57.png](attachment:57.png)\n",
     "\n",
-    "Figure 2-57. Comparison of several classifiers in scikit-learn on synthetic datasets (image courtesy http://scikit-learn.org)"
+    "Figure 3. Comparison of several classifiers in scikit-learn on synthetic datasets (image courtesy http://scikit-learn\n",
+    ".org)"
    ]
   },
   {
@@ -444,6 +454,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.9"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
