--- a/neuralNetworks.ipynb
+++ b/neuralNetworks.ipynb
@@ -58,7 +58,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "In plain English, ŷ is a weighted sum of the input features x[0] to x[p], weighted by the learned coefficients w[0] to w[p]. We could visualize this graphically as shown in thew figure below:"
+    "In plain English, ŷ is a weighted sum of the input features x[0] to x[p], weighted by the learned coefficients w[0] \n",
+    "to w[p]. We could visualize this graphically as shown in figure 1 below:"
    ],
    "metadata": {
     "collapsed": false
@@ -83,7 +84,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Figure. Visualization of logistic regression, where input features and predictions are shown as nodes, and the coefficients are connections between the nodes"
+    "Figure 1. Visualization of logistic regression, where input features and predictions are shown as nodes, and the \n",
+    "coefficients are connections between the nodes"
    ],
    "metadata": {
     "collapsed": false
@@ -118,7 +120,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Figure. Illustration of a multilayer perceptron with a single hidden layer"
+    "Figure 2. Illustration of a multilayer perceptron with a single hidden layer"
    ],
    "metadata": {
     "collapsed": false
@@ -145,7 +147,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "where ŷ is a weighted sum of the input features x[0] to x[p], weighted by the learned coefficients w[0] to w[p]. We could visualize this graphically as shown in Figure 2-44:"
+    "where ŷ is a weighted sum of the input features x[0] to x[p], weighted by the learned coefficients w[0] to w[p]. We \n",
+    "could visualize this graphically as shown in the figure 3 below:"
    ],
    "metadata": {
     "collapsed": false
@@ -168,7 +171,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Figure 2-44. Visualization of logistic regression, where input features and predictions are shown as nodes, and the coefficients are connections between the nodes"
+    "Figure 3. Visualization of logistic regression, where input features and predictions are shown as nodes, and the \n",
+    "coefficients are connections between the nodes"
    ],
    "metadata": {
     "collapsed": false
@@ -179,7 +183,9 @@
    "source": [
     "Here, each node on the left represents an input feature, the connecting lines represent the learned coefficients, and the node on the right represents the output, which is a weighted sum of the inputs.\n",
     "\n",
-    "In an MLP this process of computing weighted sums is repeated multiple times, first computing hidden units that represent an intermediate processing step, which are again combined using weighted sums to yield the final result (Figure 2-45):"
+    "In an MLP this process of computing weighted sums is repeated multiple times, first computing hidden units that \n",
+    "represent an intermediate processing step, which are again combined using weighted sums to yield the final result \n",
+    "(Figure 4 below):"
    ],
    "metadata": {
     "collapsed": false
@@ -202,7 +208,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Figure 2-45. Illustration of a multilayer perceptron with a single hidden layer"
+    "Figure 4. Illustration of a multilayer perceptron with a single hidden layer"
    ],
    "metadata": {
     "collapsed": false
@@ -213,7 +219,12 @@
    "source": [
     "This model has a lot more coefficients (also called weights) to learn: there is one between every input and every hidden unit (which make up the hidden layer), and one between every unit in the hidden layer and the output.\n",
     "\n",
-    "Computing a series of weighted sums is mathematically the same as computing just one weighted sum, so to make this model truly more powerful than a linear model, we need one extra trick. After computing a weighted sum for each hidden unit, a nonlinear function is applied to the result—usually the rectifying nonlinearity (also known as rectified linear unit or relu) or the tangens hyperbolicus (tanh). The result of this function is then used in the weighted sum that computes the output, ŷ. The two functions are visualized in Figure 2-46. The relu cuts off values below zero, while tanh saturates to –1 for low input values and +1 for high input values. Either nonlinear function allows the neural network to learn much more complicated functions than a linear model could:"
+    "Computing a series of weighted sums is mathematically the same as computing just one weighted sum, so to make this \n",
+    "model truly more powerful than a linear model, we need one extra trick. After computing a weighted sum for each \n",
+    "hidden unit, a nonlinear function is applied to the result—usually the rectifying nonlinearity (also known as \n",
+    "rectified linear unit or relu) or the tangens hyperbolicus (tanh). The result of this function is then used in the \n",
+    "weighted sum that computes the output, ŷ. The two functions are visualized in the Figure 5 below. The relu cuts off \n",
+    "values below zero, while tanh saturates to –1 for low input values and +1 for high input values. Either nonlinear function allows the neural network to learn much more complicated functions than a linear model could:"
    ],
    "metadata": {
     "collapsed": false
@@ -232,7 +243,7 @@
     "plt.plot(line, np.maximum(line, 0), label=\"relu\")\n",
     "plt.legend(loc=\"best\")\n",
     "plt.xlabel(\"x\")\n",
-    "plt.ylabel(\"relu(x), tanh(x)\")"
+    "plt.ylabel(\"relu(x), tanh(x)\")\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -244,15 +255,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "\n",
-    "line = np.linspace(-3, 3, 100)\n",
-    "plt.plot(line, np.tanh(line), label=\"tanh\")\n",
-    "plt.plot(line, np.maximum(line, 0), label=\"relu\")\n",
-    "plt.legend(loc=\"best\")\n",
-    "plt.xlabel(\"x\")\n",
-    "plt.ylabel(\"relu(x), tanh(x)\")"
+    "Figure 5. The hyperbolic tangent activation function and the rectified linear activation function"
    ],
    "metadata": {
     "collapsed": false
@@ -262,26 +265,6 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "\n",
-    "line = np.linspace(-3, 3, 100)\n",
-    "plt.plot(line, np.tanh(line), label=\"tanh\")\n",
-    "plt.plot(line, np.maximum(line, 0), label=\"relu\")\n",
-    "plt.legend(loc=\"best\")\n",
-    "plt.xlabel(\"x\")\n",
-    "plt.ylabel(\"relu(x), tanh(x)\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
    "source": [
     "h[0] = tanh(w[0, 0] * x[0] + w[1, 0] * x[1] + w[2, 0] * x[2] + w[3, 0] * x[3] + b[0])\n",
     "\n",
@@ -292,13 +275,20 @@
     "ŷ = v[0] * h[0] + v[1] * h[1] + v[2] * h[2] + b"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md \n"
+    }
    }
   },
   {
    "cell_type": "markdown",
    "source": [
-    "Here, w are the weights between the input x and the hidden layer h, and v are the weights between the hidden layer h and the output ŷ. The weights v and w are learned from data, x are the input features, ŷ is the computed output, and h are intermediate computations. An important parameter that needs to be set by the user is the number of nodes in the hidden layer. This can be as small as 10 for very small or simple datasets and as big as 10,000 for very complex data. It is also possible to add additional hidden layers, as shown in Figure 2-47:\n",
+    "Here, w are the weights between the input x and the hidden layer h, and v are the weights between the hidden layer h \n",
+    "and the output ŷ. The weights v and w are learned from data, x are the input features, ŷ is the computed output, and \n",
+    "h are intermediate computations. An important parameter that needs to be set by the user is the number of nodes in \n",
+    "the hidden layer. This can be as small as 10 for very small or simple datasets and as big as 10,000 for very complex \n",
+    "data. It is also possible to add additional hidden layers, as shown in Figure 6 below:\n",
     "\n"
    ],
    "metadata": {
@@ -322,7 +312,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Figure 2-47. A multilayer perceptron with two hidden layers"
+    "Figure 6. A multilayer perceptron with two hidden layers"
    ],
    "metadata": {
     "collapsed": false
@@ -343,7 +333,8 @@
    "source": [
     "*2.0 TUNING NEURAL NETWORKS*\n",
     "\n",
-    "Let’s look into the workings of the MLP by applying the MLPClassifier to the two_moons dataset we used earlier in this chapter. The results are shown in Figure 2-48:"
+    "Let’s look into the workings of the MLP by applying the MLPClassifier to the two_moons dataset we used in an earlier \n",
+    "class. The results are shown in  Figure 7 below:"
    ],
    "metadata": {
     "collapsed": false
@@ -379,7 +370,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Figure 2-48. Decision boundary learned by a neural network with 100 hidden units on the two_moons dataset"
+    "Figure 7. Decision boundary learned by a neural network with 100 hidden units on the two_moons dataset"
    ],
    "metadata": {
     "collapsed": false
@@ -390,7 +381,8 @@
    "source": [
     "As you can see, the neural network learned a very nonlinear but relatively smooth decision boundary. We used solver='lbfgs', which we will discuss later.\n",
     "\n",
-    "By default, the MLP uses 100 hidden nodes, which is quite a lot for this small dataset. We can reduce the number (which reduces the complexity of the model) and still get a good result (Figure 2-49):"
+    "By default, the MLP uses 100 hidden nodes, which is quite a lot for this small dataset. We can reduce the number \n",
+    "(which reduces the complexity of the model) and still get a good result (Figure 8 below):"
    ],
    "metadata": {
     "collapsed": false
@@ -418,7 +410,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Figure 2-49. Decision boundary learned by a neural network with 10 hidden units on the two_moons dataset"
+    "Figure 8. Decision boundary learned by a neural network with 10 hidden units on the two_moons dataset"
    ],
    "metadata": {
     "collapsed": false
@@ -427,7 +419,10 @@
   {
    "cell_type": "markdown",
    "source": [
-    "With only 10 hidden units, the decision boundary looks somewhat more ragged. The default nonlinearity is relu, shown in Figure 2-46. With a single hidden layer, this means the decision function will be made up of 10 straight line segments. If we want a smoother decision boundary, we could add more hidden units (as in Figure 2-48), add a second hidden layer (Figure 2-50), or use the tanh nonlinearity (Figure 2-51):"
+    "With only 10 hidden units, the decision boundary looks somewhat more ragged. The default nonlinearity is relu, shown \n",
+    "in Figure 9 below. With a single hidden layer, this means the decision function will be made up of 10 straight line \n",
+    "segments. If we want a smoother decision boundary, we could add more hidden units (as in Figure 8), add a second \n",
+    "hidden layer (Figure 9), or use the tanh nonlinearity (Figure 10):"
    ],
    "metadata": {
     "collapsed": false
@@ -457,7 +452,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Figure 2-50. Decision boundary learned using 2 hidden layers with 10 hidden units each, with rect activation function"
+    "Figure 9. Decision boundary learned using 2 hidden layers with 10 hidden units each, with rect activation function"
    ],
    "metadata": {
     "collapsed": false
@@ -487,7 +482,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Figure 2-51. Decision boundary learned using 2 hidden layers with 10 hidden units each, with tanh activation function"
+    "Figure 10. Decision boundary learned using 2 hidden layers with 10 hidden units each, with tanh activation function"
    ],
    "metadata": {
     "collapsed": false
@@ -496,7 +491,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Finally, we can also control the complexity of a neural network by using an l2 penalty to shrink the weights toward zero, as we did in ridge regression and the linear classifiers. The parameter for this in the MLPClassifier is alpha (as in the linear regression models), and it’s set to a very low value (little regularization) by default. Figure 2-52 shows the effect of different values of alpha on the two_moons dataset, using two hidden layers of 10 or 100 units each:"
+    "Finally, we can also control the complexity of a neural network by using an l2 penalty to shrink the weights toward \n",
+    "zero, as we did in ridge regression and the linear classifiers. The parameter for this in the MLPClassifier is alpha \n",
+    "(as in the linear regression models), and it’s set to a very low value (little regularization) by default. Figure 11 shows the effect of different values of alpha on the two_moons dataset, using two hidden layers of 10 or 100 units each:"
    ],
    "metadata": {
     "collapsed": false
@@ -529,7 +526,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Figure 2-52. Decision functions for different numbers of hidden units and different settings of the alpha parameter\n"
+    "Figure 11. Decision functions for different numbers of hidden units and different settings of the alpha parameter\n"
    ],
    "metadata": {
     "collapsed": false
@@ -540,7 +537,9 @@
    "source": [
     "As you probably have realized by now, there are many ways to control the complexity of a neural network: the number of hidden layers, the number of units in each hidden layer, and the regularization (alpha). There are actually even more, which we won’t go into here.\n",
     "\n",
-    "An important property of neural networks is that their weights are set randomly before learning is started, and this random initialization affects the model that is learned. That means that even when using exactly the same parameters, we can obtain very different models when using different random seeds. If the networks are large, and their complexity is chosen properly, this should not affect accuracy too much, but it is worth keeping in mind (particularly for smaller networks). Figure 2-53 shows plots of several models, all learned with the same settings of the parameters:\n",
+    "An important property of neural networks is that their weights are set randomly before learning is started, and this \n",
+    "random initialization affects the model that is learned. That means that even when using exactly the same parameters,\n",
+    " we can obtain very different models when using different random seeds. If the networks are large, and their complexity is chosen properly, this should not affect accuracy too much, but it is worth keeping in mind (particularly for smaller networks). Figure 12 shows plots of several models, all learned with the same settings of the parameters:\n",
     "\n"
    ],
    "metadata": {
@@ -570,7 +569,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Figure 2-53. Decision functions learned with the same parameters but different random initializations"
+    "Figure 12. Decision functions learned with the same parameters but different random initializations"
    ],
    "metadata": {
     "collapsed": false
@@ -720,7 +719,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "This leads to a performance on par with the best models so far. While it is possible to analyze what a neural network has learned, this is usually much trickier than analyzing a linear model or a tree-based model. One way to inspect what was learned is to look at the weights in the model. You can see an example of this in the scikit-learn example gallery. For the Breast Cancer dataset, this might be a bit hard to understand. The following plot (Figure 2-54) shows the weights that were learned connecting the input to the first hidden layer. The rows in this plot correspond to the 30 input features, while the columns correspond to the 100 hidden units. Light colors represent large positive values, while dark colors represent negative values:"
+    "This leads to a performance on par with the best models so far. While it is possible to analyze what a neural network\n",
+    " has learned, this is usually much trickier than analyzing a linear model or a tree-based model. One way to inspect \n",
+    " what was learned is to look at the weights in the model. You can see an example of this in the scikit-learn example gallery. For the Breast Cancer dataset, this might be a bit hard to understand. The following plot (Figure 13) shows the weights that were learned connecting the input to the first hidden layer. The rows in this plot correspond to the 30 input features, while the columns correspond to the 100 hidden units. Light colors represent large positive values, while dark colors represent negative values:"
    ],
    "metadata": {
     "collapsed": false
@@ -742,6 +743,18 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Figure 13. Heat map of the first layer weights in a neural network learned on the Breast Cancer dataset"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   },
